--- a/gson/pom.xml
+++ b/gson/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson-parent</artifactId>
-    <version>2.13.2-SNAPSHOT</version>
+    <version>2.13.2-rc1</version>
   </parent>
 
   <artifactId>gson</artifactId>
@@ -36,7 +36,7 @@
   <properties>
     <!-- Make the build reproducible, see root `pom.xml` -->
     <!-- This is duplicated here because that is recommended by `artifact:check-buildplan` -->
-    <project.build.outputTimestamp>2025-04-24T01:03:45Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-09-08T22:04:31Z</project.build.outputTimestamp>
 
     <excludeTestCompilation>**/Java17*</excludeTestCompilation>
   </properties>
