--- a/extras/pom.xml
+++ b/extras/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson-parent</artifactId>
-    <version>2.13.2-rc1</version>
+    <version>2.13.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>gson-extras</artifactId>
@@ -31,7 +31,7 @@
   <properties>
     <!-- Make the build reproducible, see root `pom.xml` -->
     <!-- This is duplicated here because that is recommended by `artifact:check-buildplan` -->
-    <project.build.outputTimestamp>2025-09-09T23:49:54Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-09-09T23:51:33Z</project.build.outputTimestamp>
 
     <!-- Overwrite property from parent; this module is currently not deployed -->
     <gson.isInternalModule>true</gson.isInternalModule>
