--- a/gson/pom.xml
+++ b/gson/pom.xml
@@ -20,10 +20,11 @@
   <parent>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson-parent</artifactId>
-    <version>2.13.2-rc1</version>
+    <version>2.13.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>gson</artifactId>
+  <version>2.13.2-rc1</version>
   <name>Gson</name>
 
   <licenses>
@@ -36,7 +37,7 @@
   <properties>
     <!-- Make the build reproducible, see root `pom.xml` -->
     <!-- This is duplicated here because that is recommended by `artifact:check-buildplan` -->
-    <project.build.outputTimestamp>2025-09-09T23:49:54Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-09-09T23:51:33Z</project.build.outputTimestamp>
 
     <excludeTestCompilation>**/Java17*</excludeTestCompilation>
   </properties>
