--- a/metrics/pom.xml
+++ b/metrics/pom.xml
@@ -19,10 +19,11 @@
   <parent>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson-parent</artifactId>
-    <version>2.13.2-rc1</version>
+    <version>2.13.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>gson-metrics</artifactId>
+  <version>2.13.2-rc1</version>
   <inceptionYear>2011</inceptionYear>
   <name>Gson Metrics</name>
   <description>Performance Metrics for Google Gson library</description>
