--- a/proto/pom.xml
+++ b/proto/pom.xml
@@ -19,17 +19,18 @@
   <parent>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson-parent</artifactId>
-    <version>2.13.2-rc1</version>
+    <version>2.13.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>proto</artifactId>
+  <version>2.13.2-rc1</version>
   <name>Gson Protobuf Support</name>
   <description>Gson support for Protobufs</description>
 
   <properties>
     <!-- Make the build reproducible, see root `pom.xml` -->
     <!-- This is duplicated here because that is recommended by `artifact:check-buildplan` -->
-    <project.build.outputTimestamp>2025-09-09T23:49:54Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-09-09T23:51:33Z</project.build.outputTimestamp>
 
     <protobufVersion>4.32.0</protobufVersion>
 
