--- a/test-graal-native-image/pom.xml
+++ b/test-graal-native-image/pom.xml
@@ -19,9 +19,10 @@
   <parent>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson-parent</artifactId>
-    <version>2.13.2-rc1</version>
+    <version>2.13.2-SNAPSHOT</version>
   </parent>
   <artifactId>test-graal-native-image</artifactId>
+  <version>2.13.2-rc1</version>
   <name>Test: GraalVM Native Image</name>
 
   <properties>
