--- a/test-jpms/pom.xml
+++ b/test-jpms/pom.xml
@@ -19,9 +19,10 @@
   <parent>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson-parent</artifactId>
-    <version>2.13.2-rc1</version>
+    <version>2.13.2-SNAPSHOT</version>
   </parent>
   <artifactId>test-jpms</artifactId>
+  <version>2.13.2-rc1</version>
   <name>Test: Java Platform Module System (JPMS)</name>
 
   <properties>
