--- a/test-shrinker/pom.xml
+++ b/test-shrinker/pom.xml
@@ -20,9 +20,10 @@
   <parent>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson-parent</artifactId>
-    <version>2.13.2-rc1</version>
+    <version>2.13.2-SNAPSHOT</version>
   </parent>
   <artifactId>test-shrinker</artifactId>
+  <version>2.13.2-rc1</version>
   <name>Test: Code shrinking (ProGuard / R8)</name>
 
   <properties>
