--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
 
   <groupId>com.google.code.gson</groupId>
   <artifactId>gson-parent</artifactId>
-  <version>2.13.2-SNAPSHOT</version>
+  <version>2.13.2-rc1</version>
   <packaging>pom</packaging>
 
   <name>Gson Parent</name>
@@ -43,7 +43,7 @@
 
     <!-- Make the build reproducible, see https://maven.apache.org/guides/mini/guide-reproducible-builds.html -->
     <!-- Automatically updated by Maven Release Plugin -->
-    <project.build.outputTimestamp>2025-09-08T22:04:31Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-09-10T17:29:28Z</project.build.outputTimestamp>
 
     <!-- These properties are to be overwritten by the Maven modules -->
     <!-- Whether this module is an integration test module -->
