--- a/extras/pom.xml
+++ b/extras/pom.xml
@@ -90,4 +90,19 @@
   <scm>
     <tag>gson-extras-2.12.1</tag>
   </scm>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.sonatype.central</groupId>
+        <artifactId>central-publishing-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>injected-central-publishing</id>
+            <phase>none</phase>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
