--- a/test-jpms/pom.xml
+++ b/test-jpms/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson-parent</artifactId>
-    <version>2.13.2-SNAPSHOT</version>
+    <version>2.13.2</version>
   </parent>
   <artifactId>test-jpms</artifactId>
   <name>Test: Java Platform Module System (JPMS)</name>
