--- a/proto/pom.xml
+++ b/proto/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson-parent</artifactId>
-    <version>2.13.2</version>
+    <version>2.13.3-SNAPSHOT</version>
   </parent>
 
   <artifactId>proto</artifactId>
@@ -29,7 +29,7 @@
   <properties>
     <!-- Make the build reproducible, see root `pom.xml` -->
     <!-- This is duplicated here because that is recommended by `artifact:check-buildplan` -->
-    <project.build.outputTimestamp>2025-09-10T20:37:36Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2025-09-10T20:39:14Z</project.build.outputTimestamp>
 
     <protobufVersion>4.32.0</protobufVersion>
 
