--- a/test-graal-native-image/pom.xml
+++ b/test-graal-native-image/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>com.google.code.gson</groupId>
     <artifactId>gson-parent</artifactId>
-    <version>2.13.2</version>
+    <version>2.13.3-SNAPSHOT</version>
   </parent>
   <artifactId>test-graal-native-image</artifactId>
   <name>Test: GraalVM Native Image</name>
