--- a/test-shrinker/pom.xml
+++ b/test-shrinker/pom.xml
@@ -32,13 +32,13 @@
     <gson.isTestModule>true</gson.isTestModule>
   </properties>
 
-  <pluginRepositories>
+  <repositories>
     <!-- R8 currently only exists in Google Maven repository -->
-    <pluginRepository>
+    <repository>
       <id>google</id>
       <url>https://maven.google.com</url>
-    </pluginRepository>
-  </pluginRepositories>
+    </repository>
+  </repositories>
 
   <dependencies>
     <dependency>
@@ -145,7 +145,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>exec-maven-plugin</artifactId>
-        <version>3.5.1</version>
+        <version>3.6.0</version>
         <executions>
           <execution>
             <id>r8</id>
