--- a/proto/pom.xml
+++ b/proto/pom.xml
@@ -96,6 +96,9 @@
             <goals>
               <goal>test-compile</goal>
             </goals>
+            <configuration>
+              <skip>${maven.test.skip}</skip>
+            </configuration>
           </execution>
         </executions>
       </plugin>
