--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,13 +17,19 @@ jobs:
     strategy:
       matrix:
         java: [ 17, 21 ]
-        # Custom JDK 11 configuration because some of the plugins and test dependencies don't support it anymore,
-        # but it is important to still test with a JDK version without Record classes
         include:
+          # Custom JDK 11 configuration because some of the plugins and test dependencies don't support it anymore,
+          # but it is important to still test with a JDK version without Record classes
           - java: 11
             # Disable Enforcer check which (intentionally) prevents using JDK 11 for building
             # Exclude 'test-graal-native-image' module because JUnit 6 requires >= Java 17
-            extra-mvn-args: -Denforcer.fail=false --projects '!:test-graal-native-image'
+            extra-mvn-args: -Denforcer.fail=false --projects '!test-graal-native-image'
+          - java: 25
+            # Disable Enforcer check which (intentionally) prevents using JDK 25 for building
+            # Exclude 'test-shrinker' because ProGuard does not support JDK 25 yet, see
+            # https://github.com/Guardsquare/proguard/issues/481 and https://github.com/Guardsquare/proguard/issues/473
+            # TODO: Once ProGuard supports JDK 25, also remove the corresponding 'JDK25' profile in `gson/pom.xml`
+            extra-mvn-args: -Denforcer.fail=false --projects '!test-shrinker'
     runs-on: ubuntu-latest
 
     steps:
@@ -39,7 +45,15 @@ jobs:
         run: mvn --batch-mode --no-transfer-progress verify javadoc:jar ${{ matrix.extra-mvn-args || '' }}
 
   native-image-test:
-    name: "GraalVM Native Image test"
+    name: "GraalVM Native Image test (JDK ${{ matrix.java }})"
+    strategy:
+      matrix:
+        java: [ 21 ]
+        include:
+          - java: 25
+            # Disable Enforcer check which (intentionally) prevents using JDK 25 for building
+            # TODO: Remove this once JDK 25 is fully supported for building Gson
+            extra-mvn-args: -Denforcer.fail=false
     runs-on: ubuntu-latest
 
     steps:
@@ -47,7 +61,7 @@ jobs:
       - name: "Set up GraalVM"
         uses: graalvm/setup-graalvm@7f488cf82a3629ee755e4e97342c01d6bed318fa  # v1.3.5
         with:
-          java-version: '21'
+          java-version: ${{ matrix.java }}
           distribution: 'graalvm'
           # According to documentation in graalvm/setup-graalvm this is used to avoid rate-limiting issues
           github-token: ${{ secrets.GITHUB_TOKEN }}
@@ -55,7 +69,7 @@ jobs:
       - name: Build and run tests
         # Only run tests in `test-graal-native-image` (and implicitly build and run tests in `gson`),
         # everything else is covered already by regular build job above
-        run: mvn test --batch-mode --no-transfer-progress --activate-profiles native-image-test --projects test-graal-native-image --also-make
+        run: mvn test --batch-mode --no-transfer-progress --activate-profiles native-image-test --projects test-graal-native-image --also-make ${{ matrix.extra-mvn-args || '' }}
 
   verify-reproducible-build:
     name: "Verify reproducible build"
